[package]
edition = "2021"
name = "cube-collection"
version = "0.5.14"

[dependencies]
# Local workspace
cube-core = { path = "../cube-core" }

# Bevy and its plugins
bevy = "0.14.0"
bevy_prototype_lyon = "0.12"

# Extra utilities
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
snafu = "0.7"
toml = "0.8"
